test/Frontend/verify2.h
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_if
if|#
directive|if
literal|0
end_if

begin_comment
comment|// expected-error {{should be ignored}}
end_comment

begin_endif
endif|#
directive|endif
end_endif

begin_error
error|#
directive|error
error|header
end_error

end_unit

